--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,43 +1,16 @@
+<!DOCTYPE html>
 
-
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://wwww.thymeleaf.org" 
-      xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head>
-        <title>TechShop</title>
-        <meta charset="UTF-8"/>
-            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+<html>
+    <head th:replace="layout/plantilla :: head">
+        <title>Tecshop</title>
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-            <h2 th:text="#{categoria.titulo}">Listado categorias</h2>
-            <a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/categoria/nuevo}" th:text="#{categoria.nuevo}">Nueva categoria</a>
-            <div th:if="${categorias != null and !categorias.empty}">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th th:text="#{categoria.descripcion}">Descripcion</th>
-                            <th th:text="#{categoria.activo}">Activa</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Modificar</th>
-                          
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="categoria: ${categorias}">
-                            <td th:text="${categoria.descripcion}"></td>
-                            <td><input type="checkbox" name="activo" th:checked="${categoria.activo}" disabled="true"></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"th:text="#{accion.eliminar}">Eliminar</a></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/categoria/modificar/}+${categoria.idCategoria}"th:text="#{accion.actualizar}">Modificar</a></td>
+        <header th:replace="layout/plantilla :: header" />
 
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div th:if="${categorias == null or categorias.empty}"th:text="#{categoria.no_mostrar}">
-            </div></div>
-        <footer th:replace="layout/plantilla :: footer"/>
+        <section th:replace="categoria/fragmentosCategoria :: botonesAgregar"/>
+        <section th:replace="categoria/fragmentosCategoria :: agregarCategoria"/>
+        <section th:replace="categoria/fragmentosCategoria :: listadoCategoria"/>
 
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
-</html>          
+</html>
