--- a/src/main/resources/templates/cliente/modifica.html
+++ b/src/main/resources/templates/cliente/modifica.html
@@ -1,45 +1,13 @@
-
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
       xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-            <h1>Datos de cliente</h1>
-            <a th:href="@{/cliente/listado}">Regresar</a>
-
-            <br/>        <br/>
-
-            <form th:action="@{/cliente/guardar}"
-                  method="post"
-                  th:object="${cliente}">
-                <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
-                <label for="nombre">Nombre</label>
-                <input type="text" name="nombre" th:field="*{nombre}"/>
-                <br/>
-
-                <label for="apellidos">Apellidos</label>
-                <input type="text" name="apellidos" th:field="*{apellidos}"/>
-                <br/>
-
-                <label for="correo">Correo</label>
-                <input type="email" name="correo" th:field="*{correo}"/>
-                <br/>
-
-                <label for="telefono">Telefono</label>
-                <input type="tel" name="telefono" th:field="*{telefono}"/>
-                <br/>
-               <label for="limite">Límite de crédito:</label>
-                <input type="number" name="limite" th:field="*{credito.limite}"/>
-                <br/>
-                <input type="submit" name="guardar" value="Guardar"/>
-            </form>
-        </div>
+        <section th:replace="cliente/fragmentosCliente :: editarCliente"/> 
         <footer th:replace="layout/plantilla :: footer"/>
 
     </body>
