--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -1,12 +1,9 @@
-
-
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
       xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
@@ -23,8 +20,8 @@
                             <th th:text="#{articulo.activo}">Activa</th>
                             <th sec:authorize="hasRole('ROLE_ADMIN')" th:text="#{accion.eliminar}">Eliminar</th>
                             <th sec:authorize="hasRole('ROLE_ADMIN')" th:text="#{accion.actualizar}">Actualizar</th>
-
                         </tr>
+
                     </thead>
                     <tbody>
                         <tr th:each="articulo:${articulos}">
