--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -1,35 +1,13 @@
-
+<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
-      xmlns:sec="http://thymeleaft.org/extras/spring-security">    <head>
+      xmlns:sec="http://thymeleaft.org/extras/spring-security">
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-            <h1>Datos de Categoria</h1>
-            <a th:href="@{/categoria/listado}"th:text="#{accion.regresar}">Regresar</a>
-
-            <br/>        <br/>
-
-            <form th:action="@{/categoria/guardar}"
-                  method="post"
-                  th:object="${categoria}">
-                <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
-                <label for="descripcion"th:text="#{categoria.descripcion}">Descripcion</label>
-                <input type="text" name="descripcion" th:field="*{descripcion}"/>
-                <br/>
-
-                <label for="activa">Activa</label>
-                <input type="checkbox" name="activo" th:field="*{activo}"/>
-                <br/>
-
-                <input type="submit" name="guardar" th:text="#{accion.guardar}"/>
-            </form>
-        </div>
-        <footer th:replace="layout/plantilla :: footer"/>
-
+        <header th:replace="layout/plantilla :: header" />
+        <section th:replace="categoria/fragmentosCategoria :: editarCategoria"/> 
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
-</html>                     
+</html>
