--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,45 +1,17 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://wwww.thymeleaf.org" 
       xmlns:sec="http://thymeleaft.org/extras/spring-security">
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8"/>
-            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-            <h2>Listado clientes</h2>
-            <a sec:authorize="hasRole('ROLE_ADMIN')"th:href="@{/cliente/nuevo}">Nuevo cliente</a>
-            <div th:if="${clientes != null and !clientes.empty}">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Apellidos</th>
-                            <th>Correo</th>
-                            <th>Telefono</th>
-                            <th>Limite</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Modificar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="cliente: ${clientes}">
-                            <td th:text="${cliente.nombre}"></td>
-                            <td th:text="${cliente.apellidos}"></td>
-                            <td th:text="${cliente.correo}"></td>
-                            <td th:text="${cliente.telefono}"></td>
-                            <td th:text="${cliente.credito.limite}"></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</a></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</a></td>
-
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div th:if="${clientes == null or clientes.empty}">
-            </div></div>
+        
+        <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+        <section th:replace="cliente/fragmentosCliente :: agregarCliente"/>
+        <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+        
         <footer th:replace="layout/plantilla :: footer"/>
 
     </body>
